--- a/cell_calling/m_cbendr_comparisons.Rmd
+++ b/cell_calling/m_cbendr_comparisons.Rmd
@@ -90,6 +90,7 @@ knitr::opts_knit$set(root.dir = '/lustre/scratch126/tol/teams/lawniczak/users/jr
 source("/nfs/users/nfs_j/jr35/multipurpose_scripts/seurat_sce/seu_sce_common_fns.R")
 source("/nfs/users/nfs_j/jr35/Mali2/mali22_code/project_plotting_fns.R")
 source("/nfs/users/nfs_j/jr35/Mali2/mali22_code/pf_common_vars.R")
+source("/nfs/users/nfs_j/jr35/Mali2/mali22_code/cell_calling/plotting_fns_n_variables.R")
 
 ```
 
@@ -391,6 +392,13 @@ cr_cbender_mdata_hmnz_syst_snky_pfumi <- map2(cr_cbender_mdata_hmnz_syst_snky[in
 ```
 
 ```{r, message=FALSE, warning=FALSE, eval=F}
+# Save the sankey plotting table for plotting in a separate script incase needed for publication
+saveRDS(cr_cbender_mdata_hmnz_syst_snky_pfumi, "data/processed/Pf/m2_all/cell_calling_plotting/cr_cbender_mdata_hmnz_syst_snky_pfumi.RDS")
+
+```
+
+
+```{r, message=FALSE, warning=FALSE, eval=F}
 # Parallelize plot generation
 plan(multisession, workers = 7)
 
@@ -673,31 +681,6 @@ cr_cbender_mdata_slct_uni <- cr_cbender_mdata_uni
 
 
 ```{r, fig.width=12, fig.height=14}
-call_methods_overlap_barplot_fn <- function(tbl = cr_cbender_mdata_slct_uni, mthd = "mthds_union", pf_umi_filt = 0, min_grp_size =0) {
-map(tbl, ~.x %>% 
-      filter(pf_umi_count >= pf_umi_filt) %>%
-      count(!!rlang::sym(mthd)) %>%
-      filter(n > min_grp_size)
-    ) %>%
-  bind_rows(., .id = "donor") %>%
-  # filter(n > 100) %>%
-  ggplot(aes(y = n/1000, x = !!rlang::sym(mthd), fill = !!rlang::sym(mthd))) +
-  geom_col() +
-  # geom_text(aes(label=n), hjust=0.5, vjust= -0.3, position = position_dodge(width = .9), size = 5, show.legend = F)+
-  geom_text(aes(label=n), angle=90, hjust=-0.1, vjust= 0.5, position = position_dodge(width = .9), size = 3.8, show.legend = F)+
-  scale_y_continuous(expand = expansion(mult = c(0.01, 0.8))) +
-  scale_fill_manual(values = c_combos_cols) +
-  facet_wrap(. ~ donor, ncol = 5, scales = "free_y") +
-  theme_classic() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1),
-        text = element_text(size = 11),
-        legend.position = "bottom")
-
-}
-```
-
-
-```{r, fig.width=12, fig.height=14}
 
 call_methods_overlap_barplot_fn(cr_cbender_mdata_slct_uni, "mthds_union", pf_umi_filt = 0, min_grp_size = 10)
 ```
@@ -727,7 +710,7 @@ call_methods_overlap_barplot_fn(cr_cbender_mdata_slct_uni, "mthds_union_slim", p
 
 
 ```{r}
-map(cr_cbender_pf100_mdata_slct_uni, ~.x %>% count(mthds_union_slim, mthds_union) %>% filter(n>10)) 
+# map(cr_cbender_pf100_mdata_slct_uni, ~.x %>% count(mthds_union_slim, mthds_union) %>% filter(n>10)) 
 ```
 
 
@@ -743,21 +726,6 @@ call_methods_overlap_barplot_fn(cr_cbender_mdata_slct_uni, "mthds_union_slim3", 
 cr_cbender_uni_pf100_mrg <- bind_rows(map(cr_cbender_mdata_slct_uni, ~filter(., pf_umi_count > 100)), .id = "donor")
 ```
 
-
-```{r, message=F, warning=F, eval=T, fig.height=14, fig.width=12}
-call_methods_overlap_scatter_fn <- function(tbl = cr_cbender_uni_pf100_mrg, gn_or_umi = "umi",  mthd = "mthds_union") {
-
-  ggplot(tbl, aes(x = log10(!!rlang::sym(paste0('pf_',gn_or_umi,'_count'))), y = log10(!!rlang::sym(paste0('hs_',gn_or_umi,'_count'))), colour = !!rlang::sym(mthd))) +
-    geom_point(size = 0.01) +
-    # geom_density_2d()  +
-    scale_colour_manual(values = c_combos_cols) +
-    facet_wrap(donor ~ .,  ncol = 5) +
-    geom_hline(yintercept = log10(100)) +
-    geom_vline(xintercept = log10(100)) +
-    guides(color = guide_legend(title = 'Cell call', override.aes = list(size = 4), ncol = 1))
-}
-
-```
 
 ```{r, message=F, warning=F, eval=T, fig.height=14, fig.width=12}
 map(c("gn", "umi"), ~call_methods_overlap_scatter_fn(gn_or_umi = .x))
@@ -816,7 +784,7 @@ imap(cr_cbender_mdata_slct_uni, ~saveRDS(.x, paste0("data/processed/Pf/",.y,"/se
 
 ```{r}
 cr_cbender_pf100_mdata_slct_uni <- map(cr_cbender_mdata_slct_uni, ~.x %>% filter(pf_umi_count >= 100))
-go()    
+# go()    
 ```
 
 ```{r}
